--- a/app/design/frontend/default/default/template/tawk/embed.phtml
+++ b/app/design/frontend/default/default/template/tawk/embed.phtml
@@ -3,7 +3,7 @@
  * Tawk.to
  *
  * NOTICE OF LICENSE
- *
+ * 
  * This source file is subject to the Open Software License (OSL 3.0)
  * that is bundled with this package in the file LICENSE.txt.
  * It is also available through the world-wide-web at this URL:
@@ -17,14 +17,17 @@
  */
 ?>
 <!--Start of Tawk.to Script-->
-<script type="text/javascript"> var $_Tawk_API={},$_Tawk_LoadStart=new Date();
+<script type="text/javascript"> 
+var Tawk_API=Tawk_API||{};
+<?php echo $this->getCurrentCustomerDetails(); ?>
+var Tawk_LoadStart=new Date();
 (function(){
 	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 	s1.async=true;
 	s1.src='<?php echo $this->getEmbedUrl() ?>';
 	s1.charset='UTF-8';
 	s1.setAttribute('crossorigin','*');
-	s0.parentNode.insertBefore(s1,s0);
+	s0.parentNode.insertBefore(s1,s0); 
 })();
 </script>
-<!--End of Tawk.to Script-->
+<!--End of Tawk.to Script--> 
